Archive/a725399d99b287a2136a80c3391d3433-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:8:21: error: ‘OtherClass’ does not name a type
     SomeClass(const OtherClass& other); 
                     ^
main.cpp:8:33: error: ISO C++ forbids declaration of ‘other’ with no type [-fpermissive]
     SomeClass(const OtherClass& other); 
                                 ^
